[package]
name = "minehelm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
schemars = { package = "apistos-schemars", version ="0.8" }
apistos = { version = "0.3.4", features = ["swagger-ui"] }
bitflags = "2.6.0"
derive_more = "0.99.18"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
pwhash = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "chrono", "json", "migrate", "runtime-tokio"] }
thiserror = "1.0.63"
actix-cors = "0.7.0"
async-trait = "0.1.81"

# Our fork
docker-api = { git = "https://github.com/MineHelm/docker-api-rs" }
